unpackaged/main/default/objects/New_Product_Request__c/New_Product_Request__c.object-meta.xml
<CustomObject>
    <label>New Product Request</label>
    <nameField>
        <label>New Product Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Product Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>