unpackaged/main/default/objects/New_Product_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium Support</fullName>
            </value>
            <value>
                <fullName>BYOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>