unpackaged/main/default/objects/New_Product_Request__c/fields/Product_Request_Definition__c.field-meta.xml
<CustomField>
    <fullName>Product_Request_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Request Definition</label>
    <referenceTo>Product_Request_Definition__c</referenceTo>
    <relationshipLabel>New Product Requests</relationshipLabel>
    <relationshipName>New_Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>