unpackaged/main/default/objects/New_Product_Request__c/fields/Request_Month__c.field-meta.xml
<CustomField>
    <fullName>Request_Month__c</fullName>
    <formula>DATE(YEAR(Request_Date__c),MONTH(Request_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Month</label>
    <type>Date</type>
</CustomField>