unpackaged/main/default/objects/New_Product_Request__c/fields/Request_Notification__c.field-meta.xml
<CustomField>
    <fullName>Request_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Notification</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>New Product Requests</relationshipLabel>
    <relationshipName>New_Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>