unpackaged/main/default/objects/New_Product_Request__c/fields/Triage_Details__c.field-meta.xml
<CustomField>
    <fullName>Triage_Details__c</fullName>
    <label>Triage Details</label>
    <type>TextArea</type>
</CustomField>