unpackaged/main/default/objects/New_Product_Request__c/fields/Triaged_By__c.field-meta.xml
<CustomField>
    <fullName>Triaged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triaged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Product_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>