unpackaged/main/default/objects/New_Product_Request__c/fields/Triaged_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Triaged_By_Role__c</fullName>
    <label>Triaged By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>